--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,8 +4,8 @@ version: 1.0.0
 homepage: https://github.com/hellobike/flutter_thrio
 
 environment:
-  sdk: '>=2.6.0 <3.0.0'
-  flutter: '>=1.12.0 <2.0.0'
+  sdk: ">=2.6.0 <3.0.0"
+  flutter: ">=1.12.0 <2.0.0"
 
 dependencies:
   flutter:
